src/objects/Violation__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Files__c</fullName>
        <label>Files</label>
        <referenceTo>Files__c</referenceTo>
        <relationshipLabel>Violations</relationshipLabel>
        <relationshipName>Violations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Line_Numbers__c</fullName>
        <label>Line Numbers</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <length>2</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ruleset__c</fullName>
        <label>Ruleset</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SimplifiedFileName__c</fullName>
        <label>SimplifiedFileName</label>
        <length>250</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Violation_Count__c</fullName>
        <label>Violation Count</label>
        <precision>8</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Violation</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Violation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Violations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>